<resources>
    <string name="app_name">Medical Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="note">Note</string>
    <string name="definition">Definition</string>
    <string name="synonyms">Synonyms</string>
    <string name="let_s_find_your_word">Let\'s find your word</string>
    <string name="camera">camera</string>
    <string name="audio">audio</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="copy">Copy</string>
    <string name="reading_name">Reading name</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="clear_all">Clear All</string>
    <string name="about">About</string>
    <string name="favorite">Favorite</string>
    <string name="delete">delete</string>
    <string name="type_note">Type note…</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
</resources>