<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lite_white"
        tools:context=".fragment.MedicineDetailsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="10dp"
                    android:src="@drawable/round_arrow_back_ios_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/toolbar_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/purple_700"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/btn_copy"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:clickable="true"
                            android:contentDescription="@string/copy"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:paddingVertical="10dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:src="@drawable/baseline_content_copy_24" />

                        <ImageView
                            android:id="@+id/btn_sound"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:clickable="true"
                            android:contentDescription="@string/reading_name"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:paddingVertical="10dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="10dp"
                            android:src="@drawable/round_volume_up_24" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_definition_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/definition"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <TextView
                        android:id="@+id/tv_definition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/box_shape_background"
                        android:padding="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_definition_title" />

                    <TextView
                        android:id="@+id/tv_synonyms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/synonyms"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_definition" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_synonyms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_synonyms" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </ScrollView>


        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/previous"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/round_arrow_back_ios_24" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/round_arrow_forward_ios_24" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>